--- a/package.json
+++ b/package.json
@@ -3,9 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-social": "5.1.1",
+    "cross-fetch": "2.1.0",
+    "faker": "^4.1.0",
+    "font-awesome": "4.7.0",
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
+    "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-graph-vis": "^1.0.2",
+    "react-popper": "0.9.2",
+    "react-redux": "5.0.7",
+    "react-redux-form": "1.16.8",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "3.1.2",
+    "reactstrap": "5.0.0",
+    "redux": "3.7.2",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
