--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "confusion",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8856/",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "bootstrap-social": "5.1.1",
     "cross-fetch": "2.1.0",
+    "d3": "^5.15.1",
     "faker": "^4.1.0",
     "font-awesome": "4.7.0",
     "lodash": "^4.17.15",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-bootstrap-typeahead": "^3.4.7",
+    "react-d3-graph": "^2.4.1",
     "react-dom": "^16.9.0",
     "react-graph-vis": "^1.0.2",
     "react-popper": "0.9.2",
@@ -18,6 +22,7 @@
     "react-redux-form": "1.16.8",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.1.2",
+    "react-tree-graph": "^4.1.0",
     "reactstrap": "5.0.0",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
