--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://biothings.io/explorer/",
   "dependencies": {
     "axios": "^0.19.2",
+    "biomedical-id-autocomplete": "^1.0.0",
     "cross-fetch": "2.1.0",
     "d3": "^4.13.0",
     "faker": "^4.1.0",
