--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "biomedical-id-autocomplete": "^1.0.3",
     "cross-fetch": "2.1.0",
+    "cytoscape": "^3.15.2",
     "d3": "^4.13.0",
     "faker": "^4.1.0",
     "font-awesome": "4.7.0",
