--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "biomedical-id-autocomplete": "^1.0.3",
     "cross-fetch": "2.1.0",
     "cytoscape": "^3.15.2",
+    "cytoscape-popper": "^1.0.7",
     "d3": "^4.13.0",
     "faker": "^4.1.0",
     "font-awesome": "4.7.0",
@@ -29,7 +30,8 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.0.0"
+    "semantic-ui-react": "^1.0.0",
+    "tippy.js": "^5.2.1"
   },
   "scripts": {
     "start": "PORT=8855 react-scripts start",
