remove unused code/packages/assets

--- a/package.json
+++ b/package.json
@@ -13,22 +13,13 @@
     "cytoscape": "^3.15.2",
     "cytoscape-popper": "^1.0.7",
     "d3": "^4.13.0",
-    "faker": "^4.1.0",
-    "font-awesome": "4.7.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
-    "react-d3-graph": "^2.5.0",
     "react-dom": "^16.13.1",
-    "react-graph-vis": "^1.0.5",
-    "react-popper": "0.9.2",
-    "react-redux": "5.0.7",
-    "react-redux-form": "1.16.8",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.1.2",
     "react-tree-graph": "^4.1.1",
-    "redux": "3.7.2",
-    "redux-logger": "3.0.6",
-    "redux-thunk": "2.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.1.1",
     "tippy.js": "^5.2.1"
