--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "proxy": "http://localhost:8856/",
   "homepage": "https://biothings.io/explorer/",
   "dependencies": {
-    "@biothings-explorer/explain": "^1.5.1",
-    "@biothings-explorer/smartapi-kg": "^1.3.0",
-    "biomedical-id-autocomplete": "^1.1.3",
+    "@biothings-explorer/call-apis": "^1.1.1",
+    "@biothings-explorer/explain": "^1.5.2",
+    "@biothings-explorer/smartapi-kg": "^1.4.0",
+    "biomedical-id-autocomplete": "^1.2.1",
     "cytoscape": "^3.15.2",
     "cytoscape-popper": "^1.0.7",
     "d3": "^4.13.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
+    "react-cytoscapejs": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.1.2",
     "react-tree-graph": "^4.1.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.0",
+    "semantic-ui-react": "^1.2.1",
     "tippy.js": "^5.2.1"
   },
   "scripts": {
