--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@biothings-explorer/smartapi-kg": "^1.3.0",
     "biomedical-id-autocomplete": "^1.2.1",
     "cytoscape": "^3.15.2",
+    "cytoscape-edgehandles": "^3.6.0",
     "cytoscape-popper": "^1.0.7",
     "d3": "^4.13.0",
     "express": "^4.17.1",
@@ -19,7 +20,7 @@
     "react-scripts": "3.1.2",
     "react-tree-graph": "^4.1.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1",
+    "semantic-ui-react": "^2.0.3",
     "tippy.js": "^5.2.1"
   },
   "scripts": {
