--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@biothings-explorer/explain": "^2.1.0",
     "@biothings-explorer/smartapi-kg": "^1.9.0",
+    "axios": "^0.21.1",
     "biomedical-id-autocomplete": "^1.2.1",
     "cytoscape": "^3.15.2",
     "cytoscape-edgehandles": "^3.6.0",
