--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tippy.js": "^6.3.1"
   },
   "scripts": {
+    "cypress:open": "cypress open",
     "start": "PORT=8855 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,7 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4"
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "cypress": "^7.4.0"
   },
   "babel": {
     "presets": [
