--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ addons:
 
 script:
   - npm run instrumented &
-  - npm run cy:run -- --record
+  - npm run cypress:run -- --record
   - kill $(jobs -p) || true
