--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "start": "PORT=8855 react-scripts start",
-    "instrumented": "PORT=8855 react-scripts -r @cypress/instrument-cra start",
+    "start": "cross-env PORT=8855 react-scripts start",
+    "instrumented": "cross-env PORT=8855 react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,7 +52,9 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@cypress/code-coverage": "^3.9.6",
     "@cypress/instrument-cra": "^1.4.0",
-    "cypress": "^7.4.0"
+    "cross-env": "^7.0.3",
+    "cypress": "^7.4.0",
+    "wait-on": "^5.3.0"
   },
   "babel": {
     "presets": [
